SGD experiment document modified, section 2 re-written

--- a/QuantEst/thesis/draft/nams.tex
+++ b/QuantEst/thesis/draft/nams.tex
@@ -10,6 +10,8 @@
 % \usepackage{algpseudocode}
 % \usepackage{algorithmic}
 \usepackage[noend]{algpseudocode}
+\usepackage{enumitem}
+
 
 \def\R{\rm I\!R}
 \def\x{\bm{x}}
