--- a/QuantEst/thesis/draft/sgd_experiment.tex
+++ b/QuantEst/thesis/draft/sgd_experiment.tex
@@ -257,6 +257,7 @@ Except for default setting of gaussian 1 distribution, two other distributions a
 	}
 \end{figure}
 
+\pagebreak
 \subsection{Data Size}
 
 \subsubsection{Estimate Results on Different Data Size}
@@ -351,6 +352,7 @@ Except for default setting of gaussian 1 distribution, two other distributions a
 	}
 \end{figure}
 
+\pagebreak
 \subsection{SGD Step Size}
 
 \subsubsection{Estimate Results on Different SGD Step sizes}
@@ -446,6 +448,7 @@ Except for default setting of gaussian 1 distribution, two other distributions a
 	}
 \end{figure}
 
+\pagebreak
 \subsection{Ordering of Data Stream}
 
 \begin{figure}[H] % [h] forces the figure to be output where it is defined in the code (it suppresses floating)
