--- a/UCB/M_UCB/notebooks/M_UCB_Simulations.ipynb
+++ b/UCB/M_UCB/notebooks/M_UCB_Simulations.ipynb
@@ -461,7 +461,7 @@
     "\n",
     "# MV-LCB\n",
     "\n",
-    "hyperpara_list = [[paras[0]]]\n",
+    "hyperpara_list = [[paras[0]], 1]\n",
     "run_exper(rewards_env, hyperpara_list, num_exper, num_rounds, MV_LCB, mvs)\n",
     "\n",
     "# Exp3\n",
