rebuttal experiment. Need TIDY UP!

--- a/UCB/M_UCB/notebooks/M_UCB_Simulations.ipynb
+++ b/UCB/M_UCB/notebooks/M_UCB_Simulations.ipynb
@@ -197,7 +197,7 @@
     "                p = IntProgress(max = num_exper)\n",
     "                p.description = 'Running'\n",
     "                display(p)\n",
-    "                results[name][subname]= simulate(rewards_env[key],summary_stats[key], policy, num_exper, num_rounds, est_flag, hyperpara, p)\n",
+    "                results[name][subname]= simulate(rewards_env[key],summary_stats[key], policy, num_exper, num_rounds, est_flag, hyperpara, None, p)\n",
     "                \n",
     "def run_exper_diff_para(rewards_env, hyperpara_list, num_exper, num_rounds, policy, summary_stats, est_flags = [True]):\n",
     "    for key in rewards_env.keys():\n",
@@ -216,7 +216,7 @@
     "            p = IntProgress(max = num_exper)\n",
     "            p.description = 'Running'\n",
     "            display(p)\n",
-    "            results[name][subname]= simulate(rewards_env[key], summary_stats[key], policy, num_exper, num_rounds, est_flag, hyperpara, p)"
+    "            results[name][subname]= simulate(rewards_env[key], summary_stats[key], policy, num_exper, num_rounds, est_flag, hyperpara, None, p)"
    ]
   },
   {
@@ -461,7 +461,7 @@
     "\n",
     "# MV-LCB\n",
     "\n",
-    "hyperpara_list = [[paras[0]], 1]\n",
+    "hyperpara_list = [[paras[0], 1]]\n",
     "run_exper(rewards_env, hyperpara_list, num_exper, num_rounds, MV_LCB, mvs)\n",
     "\n",
     "# Exp3\n",
